# firo-ros-workspace

./: .gitmodules  README.md  navigation.rviz
src/firo_bringup/: CMakeLists.txt  README.md  package.xml
src/firo_bringup/config/: controllers.yaml  hardware_interfaces.yaml
src/firo_bringup/launch/: firo.launch
src/firo_cameras/: CMakeLists.txt  README.md  package.xml
src/firo_cameras/config/oak_d_w/: kalibr_imu_chain.yaml
src/firo_cameras/launch/: hard_iron_calibration.launch  oak_d_w.launch
src/firo_cameras/src/: oak_d_w.cpp
src/firo_control/: CMakeLists.txt  README.md  package.xml
src/firo_control/config/: controllers.yaml  hardware_interfaces.yaml
src/firo_control/launch/: controllers.launch  hardware_interfaces.launch
src/firo_control/src/: firo_control.cpp
src/firo_description/: CMakeLists.txt  README.md  package.xml
src/firo_description/config/: mechanical.yaml
src/firo_description/config/inertial/: oak-d-w.yaml  torso.yaml  wheel.yaml
src/firo_description/launch/: firo_description.launch  firo_rviz.launch
src/firo_description/meshes/collision/: torso.stl
src/firo_description/meshes/visual/: wheel.stl
src/firo_description/robots/: firo.urdf.xacro
src/firo_description/rviz/: firo.rviz
src/firo_description/urdf/: materials.urdf.xacro  oak-d-w.urdf.xacro  torso.urdf.xacro  wheel.urdf.xacro
src/firo_gazebo/: CMakeLists.txt  README.md  package.xml
src/firo_gazebo/launch/: gazebo.launch
src/firo_localization/: CMakeLists.txt  README.md  package.xml
src/firo_localization/config/: map_sensor_fusion.yaml  odom_sensor_fusion.yaml
src/firo_localization/launch/: localization.launch  map_sensor_fusion.launch  odom_sensor_fusion.launch
src/firo_navigation/: CMakeLists.txt  README.md  package.xml
src/firo_navigation/config/: base_local_planner.yaml  costmap_common.yaml  global_costmap.yaml  local_costmap.yaml
src/firo_navigation/launch/: navigation.launch
src/firo_navigation/scripts/: simple_goal_relay.py
