<?xml version="1.0"?>
<package format="2">
  <name>firo_bringup</name>
  <version>1.0.0</version>
  <description>Launch files, configs and scripts needed to bring FIRO up into a running state</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>BSD-3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>firo_control</exec_depend>
  <exec_depend>odrive_driver</exec_depend>
</package>
