<?xml version="1.0"?>
<package format="2">
  <name>firo_cameras</name>
  <version>1.0.0</version>
  <description>FIRO camera nodes, configs and launch files</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>camera_info_manager</depend>
  <depend>depthai_bridge</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>depthai</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>depthai-ros</exec_depend>

</package>
