<?xml version="1.0"?>
<package format="2">
  <name>firo_description</name>
  <version>1.0.0</version>
  <description>FIRO robot description</description>

  <maintainer email="gabrysbrzezinski@gmail.com">Gabriel Brzeziński</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

</package>
