<?xml version="1.0"?>
<package format="2">
  <name>firo_localization</name>
  <version>1.0.0</version>
  <description>FIRO localization configs and launch files</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>imu_transformer</exec_depend>
</package>
