<?xml version="1.0"?>
<package format="2">
  <name>firo_navigation</name>
  <version>1.0.0</version>
  <description>Navigation autonomy for FIRO rover</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>mbf_costmap_nav</exec_depend>
  <exec_depend>mbf_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>move_base_flex</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rotate_recovery</exec_depend>
  <exec_depend>firo_description</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
